--- a/basic_html/bottom_bar.html
+++ b/basic_html/bottom_bar.html
@@ -2,7 +2,7 @@
   #bottom_bar{
     display: table;
     position: relative;
-    bottom: -50px;
+    bottom: -60px;
     right: 0;
     left: 0;
     background-color: #212121;
@@ -10,6 +10,7 @@
     width: 100%;
     text-align: center;
     height: 1.5em;
+
   }
 
   #bottom_bar p {
@@ -19,5 +20,5 @@
 </style>
 
 <div id="bottom_bar">
-   <p>Copyright (c) 2016 Haurentziu All Rights Reserved.</p>
+   <p>Copyright (c) 2016 Valuare Si Talent. All Rights Reserved.</p>
 </div>
