--- a/fractal/index.html
+++ b/fractal/index.html
@@ -71,7 +71,7 @@
             intervalNo = j;
             //break works weirdly on NVidia https://www.opengl.org/discussion_boards/showthread.php/170219-Odd-GLSL-loop-breakout-behavior
             //FML!!!
-            //break;
+            break;
           }
         }
 
