added rotation, fixed range slider in firefox and added close button to help

--- a/basic_html/bottom_bar.html
+++ b/basic_html/bottom_bar.html
@@ -2,7 +2,7 @@
   #bottom_bar{
     display: table;
     position: relative;
-    bottom: -60px;
+    bottom: -85px;
     right: 0;
     left: 0;
     background-color: #212121;
@@ -20,5 +20,5 @@
 </style>
 
 <div id="bottom_bar">
-   <p>Copyright (c) 2016 Valuare Si Talent. All Rights Reserved.</p>
+   <p>Copyright (c) 2016 Raccoon Party. All Rights Reserved.</p>
 </div>
